pússaði aðeins til htmlunum og lagaði scss in

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -6,7 +6,8 @@
     <title>Vöruhúsið</title>
 
     <link rel="stylesheet" href="../grid.css">
-    <link rel="stylesheet" href="../styles.css">
+	<link rel="stylesheet" href="../styles.css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700%7COswald:400,600,700" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -56,7 +57,7 @@
 	            	        <div class="vara__moguleikar__karfa">
                                 <p class="vara__moguleikar__karfa__fjoldi">Fjöldi:</p>
                                 <div>
-                                    <input class="vara__moguleikar__karfa__fjoldi--input" type="text" name="fjoldi" value="2">
+                                    <input class="vara__moguleikar__karfa__fjoldi--input" type="number" name="fjoldi" value="2">
                                     <button class="vara__moguleikar__karfa__takki"><img class="vara__moguleikar__karfa__takki--karfa" src="../img/cart.svg" alt="kerra"> Uppfæra</button>
                                     <button class="vara__moguleikar__karfa__takki"><img class="vara__moguleikar__karfa__takki--karfa" src="../img/cart.svg" alt="kerra"> Eyða úr körfu</button>
                                 </div>
@@ -78,7 +79,7 @@
             		        <div class="vara__moguleikar__karfa">
             		        	<p class="vara__moguleikar__karfa__fjoldi">Fjöldi:</p>
                                 <div>
-                                    <input class="vara__moguleikar__karfa__fjoldi--input" type="text" name="fjoldi" value="4">
+                                    <input class="vara__moguleikar__karfa__fjoldi--input" type="number" name="fjoldi" value="4">
             		        	    <button class="vara__moguleikar__karfa__takki"><img class="vara__moguleikar__karfa__takki--karfa" src="../img/cart.svg" alt="kerra"> Uppfæra</button>
                                     <button class="vara__moguleikar__karfa__takki"><img class="vara__moguleikar__karfa__takki--karfa" src="../img/cart.svg" alt="kerra"> Eyða úr körfu</button>
                                 </div>
