--- a/pages/products.html
+++ b/pages/products.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="../grid.css">
     <link rel="stylesheet" href="../styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700%7COswald:400,600,700" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -38,8 +39,8 @@
 
  <main>
      <div class="vorur">
-         <div class="vorur__row">
-             <div class="vorur__col col--Big3 col--Bigger4">
+         <div class="vorur__row row">
+             <div class="col col--Big3 col--Bigger4">
                  <div class="vara">
                     <img class="vara__image" src="../img/Backpack.jpg" alt="Appelsínugulur Bakpoki">
                     <div class="vara__innihald">
@@ -61,7 +62,7 @@
                 </div>
             </div>
         
-            <div class="vorur__col col--Big3 col--Bigger4">
+            <div class="col col--Big3 col--Bigger4">
                 <div class="vara">
                     <img class="vara__image" src="../img/chalkbag.jpg" alt="Flottur Kalkpoki">
                     <div class="vara__innihald">
@@ -82,7 +83,7 @@
                     </div>
                 </div>
             </div>
-            <div class="vorur__col col--Big3 col--Bigger4">
+            <div class="col col--Big3 col--Bigger4">
                 <div class="vara">
                     <img class="vara__image" src="../img/climbingrope.jpg" alt="Blátt Klifurband">
                     <div class="vara__innihald">
@@ -103,7 +104,7 @@
                     </div>
                 </div>
             </div>
-            <div class="vorur__col col--Big3 col--Bigger4">
+            <div class="col col--Big3 col--Bigger4">
                 <div class="vara">
                     <img class="vara__image" src="../img/shoes.jpg" alt="Þröngir Klifurskór">
                     <div class="vara__innihald">
@@ -124,7 +125,7 @@
                     </div>
                 </div>
             </div>
-            <div class="vorur__col col--Big3 col--Bigger4">
+            <div class="col col--Big3 col--Bigger4">
                 <div class="vara">
                     <img class="vara__image" src="../img/Dring.jpg" alt="Litríkar Karabínur">
                     <div class="vara__innihald">
@@ -145,7 +146,7 @@
                     </div>
                 </div>
             </div>
-            <div class="vorur__col col--Big3 col--Bigger4">
+            <div class="col col--Big3 col--Bigger4">
                 <div class="vara">        
                     <img class="vara__image" src="../img/Harness.jpg" alt="Lúxus Klifurbelti">
                     <div class="vara__innihald">
