Bætti nokkrum breyutm við config og setti í öll scsss in

--- a/pages/cart.html
+++ b/pages/cart.html
@@ -47,7 +47,7 @@
               <div class="vorur__col">
                   <div class="vara dir--row">
                     <img class="vara__image col--Big4" src="../img/Backpack.jpg" alt="Bakpoki">
-                    <div class="vara__innihald col--Big2 padd--left10">
+                    <div class="vara__innihald col--Big2 bigCart">
                         <div class="vara__uppi">
                             <h2 class="vara__heiti">Bakpoki</h2>
 	            	        <p class="vara__lysing">Þú getur geymt allt sem þú þarft fyrir klifrið í þessum bakpoka.</p>
@@ -69,7 +69,7 @@
             <div class="vorur__col">
 	            <div class="vara dir--row">
                     <img class="vara__image col--Big4" src="../img/chalkbag.jpg" alt="Kalkpoki">
-                    <div class="vara__innihald col--Big2 padd--left10">
+                    <div class="vara__innihald col--Big2 bigCart">
                         <div class="vara__uppi">
                             <h2 class="vara__heiti">Kalkpoki</h2>
             		        <p class="vara__lysing">Kalkaðu hendurnar áður en þú verður kalkaður í hausnum.</p>
