--- a/pages/course.html
+++ b/pages/course.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="../grid.css">
     <link rel="stylesheet" href="../styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700%7COswald:400,600,700" rel="stylesheet">
   </head>
   <body>
     <header>
