Lagaði til kóðan fyrir headerinn og setti hann í header1 skrá, setti linkinn fyrir header scss ið sem header1.scss, setti breytingarnar fyrir headerinn inn á allar sípurnar

--- a/pages/course.html
+++ b/pages/course.html
@@ -7,35 +7,40 @@
 
     <link rel="stylesheet" href="../grid.css">
     <link rel="stylesheet" href="../styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700%7COswald:400,600,700" rel="stylesheet">
   </head>
   <body>
-    <header>
-        <div class="header__row"> 
-            <div class="header__row__grid">
-                <h1 class="header__title">Prílihúsið</h1>
-            </div>
-            <div class="header__row__grid">
-                <ul class="header__list header__row__grid-nested">
-                    <div class="header__row-index">
-                        <li class="header__row-item"><a class="header__link" href="../index.html">FORSÍÐA</a></li>
+        <header>
+                <div class="header__row row"> 
+                    <div class="col header__col">
+                        <h1 class="header__title">Prílihúsið</h1>
                     </div>
-                    <div class="header__row-products">
-                        <li class="header__row-item"><a class="header__link" href="products.html">VÖRUR</a></li>
+                    <div class="col header__links">
+                    <div class="header__empty"></div>
+                        <div class="header__list">
+                            <div class="header__index">
+                                <p class="header--item"><a class="header__link" href="../index.html">FORSÍÐA</a></p>
+                            </div>
+                            <div class="header__products">
+                                <p class="header---item"><a class="header__link" href="products.html">VÖRUR</a></p>
+                            </div>
+                            <div class="header__course">
+                                <p class="header--item"><a class="header__link" href="course.html">NÁMSKEIÐ</a></p>
+                            </div>
+                            <div class="header__staff">
+                                <p class="header--item"><a class="header__link" href="staff.html">STARFSFÓLK</a></p>
+                            </div>
+                        </div>
+                            <div class="header__cart">
+                                <p class="header--item">
+                                    <img class="header__img" src="../img/cart.svg" alt="kerra">
+                                    <a class="header__link" href="cart.html"> Karfa (6)</a>
+                                </p>
+                            </div>
+                        
                     </div>
-                    <div class="header__row-course">
-                        <li class="header__row-item"><a class="header__link" href="course.html"><u>NÁMSKEIÐ</u></a></li>
-                    </div>
-                    <div class="header__row-staff">
-                        <li class="header__row-item"><a class="header__link" href="staff.html">STARFSFÓLK</a></li>
-                    </div>
-                    <div class="header__row-cart">
-                        <li class="header__row-item"><img class="header__img" src="../img/cart.svg" alt="kerra"><a class="header__link" href="cart.html"> Karfa (6)</a></li>
-                    </div>
-                </ul>
-            </div>
-        </div>
-</header>
-
+                </div>
+        </header>
     <main>
         <div class="course">
 
